# quantum-competitor-intelligence

./: .gitignore  ARCHITECTURE.md  SOP.md  services.json  startup.bat  startup.ps1  valve_symbol_glossary.xlsx
.claude/: scheduled_tasks.json  settings.json  settings.local.json
competitor_profiles/: __init__.py  add_sources.py  algo_report_unified.aux  algo_report_unified.out  algo_report_unified.tex  algo_report_unified.toc  algorithmiq_data_listing.md  algorithmiq_report.md  export_quera_profile.py  extract_xanadu_authors.py  generator.py  profiles.db  profiles_export_20260617.xlsx  render.py  schema.py  seed_psiquantum.py  seed_xanadu.py  update_psiquantum_cross.py  update_psiquantum_team.py  update_xanadu_cross.py  xanadu_authors.json
conference_db/: build_db.py
dataprojection/: .env.example  .gitignore  app.py  launch.bat  requirements.txt  step2_chat.py  test_cli.py  数镜_DataMirror_技术架构规划.docx
lit-review/: pyproject.toml
lit-review/output/: review.md  review_v1.md
lit-review/src/lit_review/: __init__.py  cli.py  config.py
lit-review/src/lit_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lit-review/src/lit_review/api/: __init__.py  _client.py  arxiv.py  semantic_scholar.py
lit-review/src/lit_review/db/: __init__.py  models.py  repository.py
lit-review/src/lit_review/export/: __init__.py  markdown.py  template.md.j2
lit-review/src/lit_review/importers/: __init__.py  bibtex.py
lit-review/tests/: test_db.py  test_export.py  test_importers.py
lit-review/tests/fixtures/: foundational.bib  sample.bib
(+97 files in other folders)
