[project]
name = "lit-review"
version = "0.1.0"
description = "Literature review tool for superconducting quantum computing"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "httpx>=0.28",
    "rich>=13.0",
    "jinja2>=3.1",
    "bibtexparser>=1.4",
    "rapidfuzz>=3.0",
]

[project.scripts]
lit-review = "lit_review.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"
